feat: implementando conteudos abordados no curso e reajustando projeto